--- a/AggregateFilter.ipynb
+++ b/AggregateFilter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "50d8c8f8-bd20-42aa-b01f-20779eaf684f",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "70bc535f-acb8-4319-8d36-261f43d49fa2",
    "metadata": {},
    "outputs": [
@@ -108,7 +108,7 @@
        " (6, 'Takahashi', 35, '開発')]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,6 +206,76 @@
     ") as e2\n",
     "on e1.department = e2.department\n",
     "where avg_age > e1.age"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "c1e8808f-a9b1-4007-8f54-95dd6dbc65c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*  postgresql://padawan:***@db:5432/dsdojo_db\n",
+      "2 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>id</th>\n",
+       "            <th>name</th>\n",
+       "            <th>age</th>\n",
+       "            <th>department</th>\n",
+       "            <th>avg</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>1</td>\n",
+       "            <td>Sato</td>\n",
+       "            <td>23</td>\n",
+       "            <td>営業</td>\n",
+       "            <td>32.0000000000000000</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>6</td>\n",
+       "            <td>Takahashi</td>\n",
+       "            <td>35</td>\n",
+       "            <td>開発</td>\n",
+       "            <td>39.3333333333333333</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(1, 'Sato', 23, '営業', Decimal('32.0000000000000000')),\n",
+       " (6, 'Takahashi', 35, '開発', Decimal('39.3333333333333333'))]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "select *\n",
+    "from (\n",
+    "    -- スカラサブクエリをつかう\n",
+    "    select *, (\n",
+    "        select avg(age)\n",
+    "        from employees as e2\n",
+    "        where e1.department = e2.department\n",
+    "    )\n",
+    "    from employees as e1\n",
+    ") as tmp\n",
+    "where avg > age"
    ]
   },
   {
