--- a/MinMax.ipynb
+++ b/MinMax.ipynb
@@ -107,6 +107,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "64151236-ab2a-4768-b460-4048328ba3d9",
+   "metadata": {},
+   "source": [
+    "## やりたいこと\n",
+    "+ グループごとに条件を満たすような最も大きいvalueの要素を取得する\n",
+    "    + 条件は`value <= 70`とする"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "a602954f-f72d-479c-b157-7b8a75d94bde",
