--- a/Subset.ipynb
+++ b/Subset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "1f39ec3a-4d9c-40f8-bd46-e9eca9ffce9e",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "e702fc8e-f004-45a1-89f9-209e71087484",
    "metadata": {},
    "outputs": [
@@ -60,7 +60,7 @@
        "[]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,6 +157,65 @@
     "    select count(item)\n",
     "    from Items\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "e1440809-0fa4-49be-9a05-0f44aa340f1e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*  postgresql://padawan:***@db:5432/dsdojo_db\n",
+      "2 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>shop</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>東京</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>仙台</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('東京',), ('仙台',)]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "select shop\n",
+    "from (\n",
+    "    -- スカラサブクエリで(利点は条件を満たすものと満たさないもの両方を分類できる)\n",
+    "    select sh.shop, count(sh.item) = (\n",
+    "        select count(item)\n",
+    "        from Items\n",
+    "    ) as flag\n",
+    "    from ShopItems as sh\n",
+    "    join Items it\n",
+    "    on sh.item = it.item\n",
+    "    group by sh.shop\n",
+    ") as tmp\n",
+    "where flag"
    ]
   },
   {
