--- a/LeadLag.ipynb
+++ b/LeadLag.ipynb
@@ -149,6 +149,79 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "id": "8aed3dce-c1c8-43ef-88cc-2596697584af",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*  postgresql://padawan:***@db:5432/dsdojo_db\n",
+      "6 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>num</th>\n",
+       "            <th>num_1</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>1</td>\n",
+       "            <td>3</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>3</td>\n",
+       "            <td>4</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>4</td>\n",
+       "            <td>6</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>6</td>\n",
+       "            <td>7</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>7</td>\n",
+       "            <td>8</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>8</td>\n",
+       "            <td>11</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(1, 3), (3, 4), (4, 6), (6, 7), (7, 8), (8, 11)]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "-- where句にサブクエリを埋める\n",
+    "select s1.num, s2.num\n",
+    "from seq as s1, seq as s2\n",
+    "where s2.num = (\n",
+    "    select min(num)\n",
+    "    from seq as s3\n",
+    "    where s1.num < s3.num\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 175,
    "id": "aca7fceb-de42-4be6-b92c-d2de20862d70",
    "metadata": {},
