--- a/CoalesceRecipes.ipynb
+++ b/CoalesceRecipes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "3ad78e39-5fd3-47f8-a729-e4659ff9f6da",
    "metadata": {},
    "outputs": [
@@ -10,8 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The sql extension is already loaded. To reload it, use:\n",
-      "  %reload_ext sql\n"
+      "\u001b[33mThere's a new jupysql version available (0.10.2), you're running 0.7.2. To upgrade: pip install jupysql --upgrade\u001b[0m\n"
      ]
     }
    ],
@@ -48,7 +47,8 @@
    "metadata": {},
    "source": [
     "## 条件が1つも当てはまらなかった時(=NULL)のデフォルト値をうめる\n",
-    "+ 空行の場合は極値関数はNULLを返すので、それの穴埋め"
+    "+ 空行の場合はsumはNULLを返すので、それの穴埋め\n",
+    "  + countの場合は空行の場合0を返す。"
    ]
   },
   {
@@ -561,9 +561,122 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a5c698aa-2573-401b-ae3c-f3acad541473",
+   "metadata": {},
+   "source": [
+    "## 1行同士をjoinする\n",
+    "+ 問題自体は各カラムについて初めて登場する(下から上に走査)非nullを見つけて、テーブル表示する"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "62966043-379b-4e59-b684-e9eebde73bde",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*  postgresql://padawan:***@db:5432/dsdojo_db\n",
+      "Done.\n",
+      "Done.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "drop table if exists Foobar;\n",
+    "CREATE TABLE Foobar\n",
+    "(lvl INTEGER NOT NULL PRIMARY KEY,\n",
+    " color VARCHAR(10),\n",
+    " length INTEGER,\n",
+    " width INTEGER,\n",
+    " hgt INTEGER);\n",
+    "\n",
+    "INSERT INTO Foobar VALUES (1, 'RED', 8, 10, 12);\n",
+    "INSERT INTO Foobar VALUES (2, NULL, NULL, NULL, 20);\n",
+    "INSERT INTO Foobar VALUES (3, NULL, 9, 82, 25);\n",
+    "INSERT INTO Foobar VALUES (4, 'BLUE', NULL, 67, NULL);\n",
+    "INSERT INTO Foobar VALUES (5, 'GRAY', NULL, NULL, NULL);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "a1282a1c-1781-43d1-8495-69293e97d641",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*  postgresql://padawan:***@db:5432/dsdojo_db\n",
+      "1 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>color</th>\n",
+       "            <th>length</th>\n",
+       "            <th>width</th>\n",
+       "            <th>hgt</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>GRAY</td>\n",
+       "            <td>9</td>\n",
+       "            <td>67</td>\n",
+       "            <td>25</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('GRAY', 9, 67, 25)]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "select\n",
+    "    coalesce(f5.color, f4.color, f3.color, f2.color, f1.color) as color,\n",
+    "    coalesce(f5.length, f4.length, f3.length, f2.length, f1.length) as length,\n",
+    "    coalesce(f5.width, f4.width, f3.width, f2.width, f1.width) as width,\n",
+    "    coalesce(f5.hgt, f4.hgt, f3.hgt, f2.hgt, f1.hgt) as hgt\n",
+    "from Foobar as f1, Foobar as f2, Foobar as f3, Foobar as f4, Foobar as f5\n",
+    "where f1.lvl = 1 and f2.lvl = 2 and f3.lvl = 3 and f4.lvl = 4 and f5.lvl = 5"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74155862-147d-4233-96f0-0b4166f524e3",
+   "id": "21b54609-3fa5-4eb1-a5e8-eb0ec24a03b9",
    "metadata": {},
    "outputs": [],
    "source": []
