add example in MinMax

--- a/MinMax.ipynb
+++ b/MinMax.ipynb
@@ -2,18 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "4fb2bcd1-caa4-4753-931c-e091e5a975ab",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[33mThere's a new jupysql version available (0.10.2), you're running 0.7.2. To upgrade: pip install jupysql --upgrade\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext sql\n",
     "import os\n",
@@ -244,7 +236,20 @@
    "id": "af133e76-0ee0-4a78-ba99-f18f0bac933e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%%sql\n",
+    "-- havingで書こうと思えばかける\n",
+    "select id, group_id, max(value)\n",
+    "from tbl as t1\n",
+    "where value <= 70\n",
+    "group by id, group_id\n",
+    "having max(value) >= all(\n",
+    "    select value\n",
+    "    from tbl as t2\n",
+    "    where t1.group_id = t2.group_id and\n",
+    "    value <= 70\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
