--- a/UpdateAllAtOnce.ipynb
+++ b/UpdateAllAtOnce.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "id": "1fb53608-a0cc-4f0c-bdf9-1a88e31afd53",
    "metadata": {},
    "outputs": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "id": "608d8ec7-4687-43b1-a103-5fad73af8709",
    "metadata": {},
    "outputs": [
@@ -110,7 +110,7 @@
        " (6, 3, None)]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,6 +206,7 @@
    ],
    "source": [
     "%%sql\n",
+    "-- 相関サブクエリを使用\n",
     "update Hotel as h1\n",
     "set room_nbr = (\n",
     "    select count(*)\n",
@@ -220,8 +221,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "190eb127-2ed5-44d8-bb07-68b690c123c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*  postgresql://padawan:***@db:5432/dsdojo_db\n",
+      "6 rows affected.\n",
+      "6 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>id</th>\n",
+       "            <th>floor_nbr</th>\n",
+       "            <th>room_nbr</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>1</td>\n",
+       "            <td>1</td>\n",
+       "            <td>1</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>2</td>\n",
+       "            <td>1</td>\n",
+       "            <td>2</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>3</td>\n",
+       "            <td>1</td>\n",
+       "            <td>3</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>4</td>\n",
+       "            <td>2</td>\n",
+       "            <td>1</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>5</td>\n",
+       "            <td>2</td>\n",
+       "            <td>2</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>6</td>\n",
+       "            <td>3</td>\n",
+       "            <td>1</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(1, 1, 1), (2, 1, 2), (3, 1, 3), (4, 2, 1), (5, 2, 2), (6, 3, 1)]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "-- window関数を使用(fromの中をwindow関数のサブクエリにすればOK)\n",
+    "update Hotel as h1\n",
+    "set room_nbr = (\n",
+    "    select idx\n",
+    "    from (\n",
+    "        select id, row_number() over (\n",
+    "            partition by floor_nbr\n",
+    "            order by id\n",
+    "        ) as idx\n",
+    "        from Hotel\n",
+    "    ) as h2\n",
+    "    where h1.id = h2.id\n",
+    ");\n",
+    "\n",
+    "select *\n",
+    "from Hotel;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a5e90e43-f0c0-42d6-9e3c-99f99f137e56",
    "metadata": {},
    "outputs": [],
    "source": []
