--- a/MaxBy.ipynb
+++ b/MaxBy.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "2f7d5895-7928-4abe-816d-180a1b998075",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The sql extension is already loaded. To reload it, use:\n",
-      "  %reload_ext sql\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext sql\n",
     "import os\n",
@@ -78,6 +69,15 @@
     "    (5,2,5),\n",
     "    (6,2,10),\n",
     "    (7,2,10);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c4996fbf-bd50-4531-9051-9992d0c8bff2",
+   "metadata": {},
+   "source": [
+    "## やりたいこと\n",
+    "+ グループごとにvalueが最大値となるレコードを抽出したい"
    ]
   },
   {
