another solution on FindMissing.ipynb

--- a/FindMissing.ipynb
+++ b/FindMissing.ipynb
@@ -2,20 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 2,
    "id": "aac3fbf3-e343-4d86-9f34-14f1c01f74aa",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The sql extension is already loaded. To reload it, use:\n",
-      "  %reload_ext sql\n",
-      "\u001b[33mThere's a new jupysql version available (0.10.2), you're running 0.7.2. To upgrade: pip install jupysql --upgrade\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext sql\n",
     "import os\n",
@@ -37,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 3,
    "id": "6332ee64-93e0-4ffa-b906-753f1e94b5ef",
    "metadata": {},
    "outputs": [
@@ -64,7 +54,7 @@
        "[]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,8 +327,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "3a99ffa3-2e52-4dd6-9da3-2bdc6744ef11",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*  postgresql://padawan:***@db:5432/dsdojo_db\n",
+      "3 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>diagram_name</th>\n",
+       "            <th>bubble_name</th>\n",
+       "            <th>flow_name</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>Proc2     </td>\n",
+       "            <td>reckon    </td>\n",
+       "            <td>facts     </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Proc1     </td>\n",
+       "            <td>input     </td>\n",
+       "            <td>facts     </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Proc1     </td>\n",
+       "            <td>output    </td>\n",
+       "            <td>opinions  </td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('Proc2     ', 'reckon    ', 'facts     '),\n",
+       " ('Proc1     ', 'input     ', 'facts     '),\n",
+       " ('Proc1     ', 'output    ', 'opinions  ')]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "select distinct d1.diagram_name, d1.bubble_name, d2.flow_name\n",
+    "from DataFlowDiagrams as d1\n",
+    "cross join DataFlowDiagrams as d2\n",
+    "-- left joinとNULL判定の組み合わせ\n",
+    "left join DataFlowDiagrams as d3\n",
+    "on d1.diagram_name = d3.diagram_name and\n",
+    "d1.bubble_name = d3.bubble_name and\n",
+    "d2.flow_name = d3.flow_name\n",
+    "where d3.flow_name is NULL"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1995f92a-9687-4bfe-944a-9e60d9cf95a8",
    "metadata": {},
    "outputs": [],
    "source": []
