--- a/ExtractDuplicate.ipynb
+++ b/ExtractDuplicate.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "id": "242d242e-cafd-4f47-9280-76fbd6f489b6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The sql extension is already loaded. To reload it, use:\n",
-      "  %reload_ext sql\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext sql\n",
     "import os\n",
@@ -36,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 2,
    "id": "17c6ec93-a5bc-4f4a-a13d-aa67b03594a3",
    "metadata": {},
    "outputs": [
@@ -60,7 +51,7 @@
        "[]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,8 +332,139 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "8a8c6a03-90d0-4282-ac22-b66bc99e1c4f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*  postgresql://padawan:***@db:5432/dsdojo_db\n",
+      "3 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>id</th>\n",
+       "            <th>name</th>\n",
+       "            <th>price</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>2</td>\n",
+       "            <td>みかん</td>\n",
+       "            <td>100</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>3</td>\n",
+       "            <td>みかん</td>\n",
+       "            <td>100</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>4</td>\n",
+       "            <td>みかん</td>\n",
+       "            <td>100</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(2, 'みかん', 100), (3, 'みかん', 100), (4, 'みかん', 100)]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "select *\n",
+    "from Products\n",
+    "where (name, price) in (\n",
+    "    select name, price\n",
+    "    from Products\n",
+    "    group by name, price\n",
+    "    having count(*) > 1\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "187d0a45-89e6-4aff-881b-a535724d41e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*  postgresql://padawan:***@db:5432/dsdojo_db\n",
+      "2 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>id</th>\n",
+       "            <th>name</th>\n",
+       "            <th>price</th>\n",
+       "            <th>row_id</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>3</td>\n",
+       "            <td>みかん</td>\n",
+       "            <td>100</td>\n",
+       "            <td>2</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>4</td>\n",
+       "            <td>みかん</td>\n",
+       "            <td>100</td>\n",
+       "            <td>3</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(3, 'みかん', 100, 2), (4, 'みかん', 100, 3)]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "-- window関数を用いる方法\n",
+    "select *\n",
+    "from (\n",
+    "    select *,\n",
+    "        row_number() over (\n",
+    "            partition by name, price\n",
+    "            order by id\n",
+    "        )\n",
+    "    from Products\n",
+    ") as tmp(id, name, price, row_id)\n",
+    "where row_id <> 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ce1159c-ff3f-4d23-8155-e6ca18db9904",
    "metadata": {},
    "outputs": [],
    "source": []
