add comment on UpdateAllAtOnce.ipynb

--- a/UpdateAllAtOnce.ipynb
+++ b/UpdateAllAtOnce.ipynb
@@ -136,6 +136,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8d90c7b1-ebb1-459a-8485-25af62829e83",
+   "metadata": {},
+   "source": [
+    "## やりたいこと\n",
+    "+ 複数行でそれぞれ異なる値にupdateする"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "id": "103070ec-8176-4ad2-9fa2-3543a4c5474f",
