fix solution in CompleteData

--- a/CompleteData.ipynb
+++ b/CompleteData.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "96290ea5-0031-4da2-9b61-d341f8f5714a",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "35306ce6-45d3-4591-a700-bedf024e9d83",
    "metadata": {},
    "outputs": [
@@ -55,7 +55,7 @@
        "[]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "f2520656-36de-405b-96f1-21eb82f353ab",
    "metadata": {},
    "outputs": [
@@ -218,27 +218,22 @@
        " (400, '理科', None)]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "%%sql\n",
-    "select\n",
-    "    ts.student_id,\n",
-    "    ts.subject,\n",
-    "    t3.score\n",
-    "from (select distinct\n",
+    "select distinct\n",
     "    t1.student_id,\n",
-    "    t2.subject\n",
-    "    from TestScores t1\n",
-    "    cross join TestScores t2\n",
-    ") ts\n",
+    "    t2.subject,\n",
+    "    t3.score\n",
+    "from TestScores t1\n",
+    "cross join TestScores t2\n",
     "left join TestScores t3\n",
-    "on ts.student_id = t3.student_id and\n",
-    "ts.subject = t3.subject\n",
-    "order by ts.student_id"
+    "on t1.student_id = t3.student_id and\n",
+    "t2.subject = t3.subject"
    ]
   },
   {
