add example of CTERecursive

--- a/CTERecursive.ipynb
+++ b/CTERecursive.ipynb
@@ -2,18 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "d50604dc-72d3-4492-86ce-d1c9229d0fc5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[33mThere's a new jupysql version available (0.10.2), you're running 0.7.2. To upgrade: pip install jupysql --upgrade\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext sql\n",
     "import os\n",
@@ -130,9 +122,133 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "796b3913-056d-49d0-8c64-e6c382901cb9",
+   "metadata": {},
+   "source": [
+    "## やりたいこと\n",
+    "+ uncountのようなことをやる(例: ('A', 3) -> 3つの('A', 1)に分解する"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "32aa377a-acb4-44d9-a7b4-5ac72ca9f1fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*  postgresql://padawan:***@db:5432/dsdojo_db\n",
+      "Done.\n",
+      "Done.\n",
+      "2 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "drop table if exists Inventory;\n",
+    "create table Inventory (\n",
+    "    goods char(10) not null primary key,\n",
+    "    pieces integer not null check (pieces >= 0)\n",
+    ");\n",
+    "\n",
+    "insert into Inventory\n",
+    "values ('CD-rom', 3), ('zz', 2);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "97118fea-5827-44c6-b79b-0485b7fcf464",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*  postgresql://padawan:***@db:5432/dsdojo_db\n",
+      "5 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>goods</th>\n",
+       "            <th>one</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>CD-rom    </td>\n",
+       "            <td>1</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>CD-rom    </td>\n",
+       "            <td>1</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>CD-rom    </td>\n",
+       "            <td>1</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>zz        </td>\n",
+       "            <td>1</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>zz        </td>\n",
+       "            <td>1</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('CD-rom    ', 1),\n",
+       " ('CD-rom    ', 1),\n",
+       " ('CD-rom    ', 1),\n",
+       " ('zz        ', 1),\n",
+       " ('zz        ', 1)]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "WITH recursive cte(goods, pieces, one) AS\n",
+    "(\n",
+    "    SELECT goods, pieces, 1 FROM Inventory\n",
+    "    UNION ALL\n",
+    "    SELECT cte.goods, cte.pieces - 1, 1\n",
+    "    FROM cte\n",
+    "    WHERE cte.pieces > 1\n",
+    ")\n",
+    "select goods, one\n",
+    "from cte\n",
+    "order by goods;"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32aa377a-acb4-44d9-a7b4-5ac72ca9f1fc",
+   "id": "60eaa53b-4c68-4c01-8077-688103f144da",
    "metadata": {},
    "outputs": [],
    "source": []
