--- a/TopN.ipynb
+++ b/TopN.ipynb
@@ -142,10 +142,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "8427f87c-d41d-4c4e-aef0-0904b3c8f97f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*  postgresql://padawan:***@db:5432/dsdojo_db\n",
+      "6 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>id</th>\n",
+       "            <th>group_id</th>\n",
+       "            <th>value</th>\n",
+       "            <th>rnk</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>4</td>\n",
+       "            <td>1</td>\n",
+       "            <td>6</td>\n",
+       "            <td>1</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>5</td>\n",
+       "            <td>1</td>\n",
+       "            <td>4</td>\n",
+       "            <td>2</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>2</td>\n",
+       "            <td>1</td>\n",
+       "            <td>4</td>\n",
+       "            <td>2</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>6</td>\n",
+       "            <td>2</td>\n",
+       "            <td>4</td>\n",
+       "            <td>1</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>7</td>\n",
+       "            <td>2</td>\n",
+       "            <td>3</td>\n",
+       "            <td>2</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>8</td>\n",
+       "            <td>3</td>\n",
+       "            <td>10</td>\n",
+       "            <td>1</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(4, 1, 6, 1),\n",
+       " (5, 1, 4, 2),\n",
+       " (2, 1, 4, 2),\n",
+       " (6, 2, 4, 1),\n",
+       " (7, 2, 3, 2),\n",
+       " (8, 3, 10, 1)]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%sql\n",
     "select *\n",
